--- a/package.json
+++ b/package.json
@@ -31,5 +31,6 @@
     "url": "https://github.com/aserber/hibrido/issues"
   },
   "homepage": "https://github.com/aserber/hibrido#readme",
+  "devDependencies": {},
   "description": ""
 }
