--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aserber/hibrido.git"
+    "url": "git+https://github.com/aserber/tento_grupo7.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/aserber/hibrido/issues"
+    "url": "https://github.com/aserber/tento_grupo7/issues"
   },
-  "homepage": "https://github.com/aserber/hibrido#readme",
+  "homepage": "https://github.com/aserber/tento_grupo7#readme",
   "description": ""
 }
